--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-      <h1>{{ title }}</h1>
-      <app-heroes></app-heroes>
-    </div>
-  </div>
-</main>
+<h1>{{ title }}</h1>
+<app-heroes></app-heroes>
+<app-messages></app-messages>
 
 <router-outlet />
